# termtyper

./: .calcipy.json  .copier-answers.yml  .pre-commit-config.yaml  .ruff.toml  404.html  README.md  example.js  gen_ref_nav.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/assets/: demo.tape
.github/workflows/: ci_pipeline.yml  update_docs.yml
docs/: CNAME  README.md  gen_ref_nav.py
docs/Advanced_Documentation/: index.html
docs/CHANGELOG/: index.html
docs/CODE_TAG_SUMMARY/: index.html
docs/DEVELOPER_GUIDE/: index.html
docs/STYLE_GUIDE/: index.html
docs/docs/: CHANGELOG.md  CODE_TAG_SUMMARY.md  DEVELOPER_GUIDE.md
modules/tui_typer_tutor/_code_diagrams/: index.html
reference/SUMMARY/: index.html
reference/tui_typer_tutor/: index.html
reference/tui_typer_tutor/app/: index.html
reference/tui_typer_tutor/app/ttt/: index.html
reference/tui_typer_tutor/constants/: index.html
reference/tui_typer_tutor/constants/display_to_textual/: index.html
reference/tui_typer_tutor/constants/vim_to_textual/: index.html
reference/tui_typer_tutor/core/: index.html
reference/tui_typer_tutor/core/config/: index.html
reference/tui_typer_tutor/core/metrics/: index.html
reference/tui_typer_tutor/core/scrolled_labels/: index.html
reference/tui_typer_tutor/core/seed_data/: index.html
reference/tui_typer_tutor/core/typing/: index.html
reference/tui_typer_tutor/core/uninstall/: index.html
reference/tui_typer_tutor/screens/: index.html
reference/tui_typer_tutor/screens/help/: index.html
reference/tui_typer_tutor/screens/main/: index.html
reference/tui_typer_tutor/scripts/: index.html
scripts/: check_imports.py
search/: search_index.json
terminal_typer_tutor/: __init__.py
termtyper/: __init__.py
termtyper/events/: events.py
termtyper/ui/: __init__.py  settings_options.py  tui.py
termtyper/ui/widgets/: __init__.py  menu.py  menus.py  minimal_scrollview.py  number_scroll.py  option.py  race_hud.py  screen.py
termtyper/utils/: generator.py  getting_started.py  play_keysound.py  preferredsoundplayer.py
tests/: configuration.py  seed_data.py  test_zz_terminal_typer_tutor.py  test_zz_tui_typer_tutor.py
tests/core/: test_metrics.py  test_seed_data.py  test_typing.py  test_uninstall.py
tests/core/__snapshots__/: test_metrics.ambr  test_typing.ambr
tui_typer_tutor/: __init__.py  cli.py  keys.py  scripts.py
tui_typer_tutor/app/: ttt.py  typer.py
tui_typer_tutor/constants/: __init__.py  display_to_textual.py  vim_to_textual.py
tui_typer_tutor/core/: config.py  metrics.py  seed_data.py  seed_data.txt  typing.py  uninstall.py
tui_typer_tutor/events/: __init__.py
tui_typer_tutor/screens/: help.py  main.py
tui_typer_tutor/tasks/: all_tasks.py
tui_typer_tutor/ui/: settings_options.py  tui.py
tui_typer_tutor/ui/widgets/: banner.py  button.py  menu.py  menus.py  minimal_scrollview.py  number_scroll.py  option.py  progress_bar.py  race_hud.py  screen.py
tui_typer_tutor/utils/: __init__.py  help_menu.py  parser.py  preferredsoundplayer.py
(+8 files in other folders)
